--- a/style.css
+++ b/style.css
@@ -8,5 +8,46 @@
 
 body {
     background-color: orange;
+    color: #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Itim', cursive;
+    font-size: 1.2rem;
+    min-height: 100vh;
+}
+
+.container {
+    background: rgba(0, 0, 0, .9);
+    border-radius: 10px;
+    margin: 1rem;
+    padding: 2rem;
+    text-align: center;
+    width: 500px;
+}
+
+.emoji {
+    display: block;
+    font-size: 4rem;
+}
+
+.joke {
+    margin: 1rem 0;
+}
+
+.btn {
+    background-color: orange;
+    border: none;
+    border-radius: 21px;
+    cursor: pointer;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: .5rem 1rem;
+    outline: none;
+    width: 70%;
+}
+
+.btn:hover {
+    background-color: rgb(238, 184, 84);
 }
